# orders-service

./: .flake8  .pre-commit-config.yaml  pyproject.toml  requirements.txt
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py  0002_customer.py  0003_auto_20210219_1459.py
api/: v1_urls.py
core/: settings.py  urls.py
core/settings/: __init__.py  base.py  production.py  staging.py
core/utils/: __init__.py  functions.py  models.py
orders/: admin.py  models.py  serializers.py  views.py
orders/migrations/: 0001_initial.py  0002_orderitem.py  0003_auto_20210219_1501.py
products/: admin.py  models.py  serializers.py
products/migrations/: 0001_initial.py
tests/: test_core.py  test_dummy.py
