[tool.poetry]
name = "orders-service"
version = "0.1.0"
description = "Simple orders service"
authors = ["Mohammed Mwijaa <mm.mwijaa@gmail.com>"]
license = "GNU General Public Licence v3"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
